plugins/groovy/testdata/highlighting/duplicateNamesInTheFile/AliasAndClassDefinition.groovy
import java.util.Calendar as Date

<error descr="Name 'Date' is already defined in file">class Date {}</error>